<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_wallet"
        android:title="@string/nav_home"
        android:contentDescription="@string/nav_home" />

    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_history"
        android:contentDescription="@string/nav_history" />

    <item
        android:id="@+id/paymentMethodsFragment"
        android:icon="@drawable/ic_card"
        android:title="@string/nav_wallet"
        android:contentDescription="@string/nav_wallet" />

    <item
        android:id="@+id/notificationPreferencesFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings"
        android:contentDescription="@string/nav_settings" />

</menu>
